<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_quotes"
            android:icon="@drawable/ic_discuss"
            android:title="@string/navigation_quotes"
            app:actionViewClass="de.andreasschrade.androidtemplate.util.NavigationItemLongPressInterceptor"
            app:showAsAction="always"
            />
        <item
            android:id="@+id/nav_samples"
            android:icon="@drawable/ic_forum"
            android:title="@string/navigation_samples"
            app:actionViewClass="de.andreasschrade.androidtemplate.util.NavigationItemLongPressInterceptor"
            app:showAsAction="always"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/navigation_settings"
            app:actionViewClass="de.andreasschrade.androidtemplate.util.NavigationItemLongPressInterceptor"
            app:showAsAction="always"/>
    </group>

    <item android:title="@string/navigation_sub_items">
        <menu>
            <item
                android:id="@+id/nav_dummy_item_1"
                android:icon="@drawable/ic_dashboard"
                android:title="@string/navigation_dummy_item_1"
                app:actionViewClass="de.andreasschrade.androidtemplate.util.NavigationItemLongPressInterceptor"
                app:showAsAction="always"/>
            <item
                android:id="@+id/nav_dummy_item_2"
                android:icon="@drawable/ic_dashboard"
                android:title="@string/navigation_dummy_item_2"
                app:actionViewClass="de.andreasschrade.androidtemplate.util.NavigationItemLongPressInterceptor"
                app:showAsAction="always"/>
        </menu>
    </item>

</menu>
